--- a/index.html
+++ b/index.html
@@ -5,26 +5,22 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>器具員数確認</title>
 <style>
-  body{margin:0;background:#111;color:#fff;font-family:-apple-system,system-ui}
-  header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px;line-height:1.5}
-  main{padding:14px;max-width:560px;margin:auto}
-  .card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
-  h2{margin:0 0 8px 0;font-size:18px}
-  .badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
-  button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
-  button:disabled{opacity:.5}
-  .small{font-size:14px;padding:10px}
-  .toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
-  .list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
-  .item b{display:block;font-size:16px}
-  .item .meta{opacity:.7;font-size:13px;margin-top:6px}
-  video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
-  .hidden{display:none}
-  .stateOut{border-color:#a33}
-  .statePending{border-color:#aa3}
-  .stateIn{border-color:#333}
-  .row{display:flex;gap:10px}
-  .row button{margin-top:0}
+body{margin:0;background:#111;color:#fff;font-family:-apple-system}
+header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
+main{padding:14px;max-width:560px;margin:auto}
+.card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
+h2{margin:0 0 8px 0;font-size:18px}
+button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
+.small{font-size:14px;padding:10px}
+.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
+.list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
+.item b{display:block;font-size:16px}
+.item .meta{opacity:.7;font-size:13px;margin-top:6px}
+video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
+.hidden{display:none}
+.stateOut{border-color:#a33}
+.statePending{border-color:#aa3}
+.stateIn{border-color:#333}
 </style>
 </head>
 <body>
@@ -33,314 +29,152 @@
 
 <script>
 /* ===== 設定 ===== */
-const GAS_URL = "https://script.google.com/macros/s/AKfycbxVpcXoJFFmO_sqOi76kMrD6hgFBR4CdCD5hpI_4bTLD3VeVrP2qbxDiJ_RTrotzLsx/exec";
-
-const TOOL_NAME = {
-  T001:"手歯止め", T002:"デジタルゲージ", T003:"検測用具",
-  T004:"誘導棒", D001:"その他（扉1）", D002:"その他（扉2）", D003:"その他（扉3）"
-};
-const MEMBERS = ["佐藤","山田","高橋"];
+const GAS_URL="https://script.google.com/macros/s/AKfycbxVpcXoJFFmO_sqOi76kMrD6hgFBR4CdCD5hpI_4bTLD3VeVrP2qbxDiJ_RTrotzLsx/exec";
+const TOOL_NAME={T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"};
+const MEMBERS=["佐藤","山田","高橋"];
 
 /* ===== URL ===== */
-const p = new URLSearchParams(location.search);
-const site = (p.get("site")||"").trim() || "A";
-const tool = (p.get("tool")||"").trim();
-const confirmMode = (p.get("confirm")||"") === "1"; // 確認者用: ?confirm=1
+const p=new URLSearchParams(location.search);
+const site=(p.get("site")||"").trim();
+const tool=(p.get("tool")||"").trim();
+const confirmMode=(p.get("confirm")||"")==="1";
 
-/* ===== DOM ===== */
-const app = document.getElementById("app");
-const hdr = document.getElementById("hdr");
-
-/* ===== 便利 ===== */
-function toast(a,b="",ms=1800){
+/* ===== 共通 ===== */
+const app=document.getElementById("app");
+const hdr=document.getElementById("hdr");
+function toast(a,b="",ms=1600){
   const d=document.createElement("div");
   d.className="toast";
-  d.innerHTML=`<div style="font-size:20px">${esc(a)}</div>${b?`<div style="opacity:.7;font-size:14px;margin-top:6px">${esc(b)}</div>`:""}`;
-  document.body.appendChild(d);
-  setTimeout(()=>d.remove(),ms);
+  d.innerHTML=`<div style="font-size:20px">${a}</div>${b?`<div style="opacity:.7;font-size:14px;margin-top:6px">${b}</div>`:""}`;
+  document.body.appendChild(d); setTimeout(()=>d.remove(),ms);
 }
-function esc(s){ return String(s).replace(/[&<>"']/g,m=>({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[m])); }
-function vibrate(ms){ try{ if(navigator.vibrate) navigator.vibrate(ms);}catch(_){} }
+function vibrate(ms){try{navigator.vibrate&&navigator.vibrate(ms);}catch(_){}}
+function getUser(){return localStorage.getItem("user")||"";}
+function setUser(n){localStorage.setItem("user",n);}
+function statusLabel(s){ if(s==="OUT")return"持ち出し中"; if(s==="PENDING")return"返却確認待ち"; return"持ち出し無し"; }
 
-function getUser(){ return localStorage.getItem("user") || ""; }
-function setUser(n){ localStorage.setItem("user", n); }
-
-function statusLabel(s){
-  if(s==="OUT") return "持ち出し中";
-  if(s==="PENDING") return "返却確認待ち";
-  return "持ち出し無し"; // IN/空
+/* ===== 通信 ===== */
+async function fetchJson(url,opt={},to=10000){
+  const ac=new AbortController(); const t=setTimeout(()=>ac.abort(),to);
+  try{ const r=await fetch(url,{...opt,signal:ac.signal}); if(!r.ok)throw 0; return await r.json(); }
+  finally{ clearTimeout(t); }
 }
-function cardText(me){
-  if(!me) return "持ち出し無し";
-  return statusLabel(me.status);
-}
-function borderClass(me){
-  if(me && me.status==="OUT") return "stateOut";
-  if(me && me.status==="PENDING") return "statePending";
-  return "stateIn";
-}
-
-/* ===== 例外でUIが死ぬのを防ぐ ===== */
-window.addEventListener("error", ()=> toast("エラー","再読み込みして"));
-window.addEventListener("unhandledrejection", ()=> toast("通信エラー","再読み込みして"));
-
-/* ===== 通信（タイムアウト付き） ===== */
-async function fetchJson(url, opt={}, timeoutMs=10000){
-  const ac = new AbortController();
-  const t = setTimeout(()=>ac.abort(), timeoutMs);
-  try{
-    const r = await fetch(url, {...opt, signal: ac.signal, cache:"no-store"});
-    if(!r.ok) throw new Error("HTTP "+r.status);
-    const js = await r.json();
-    return js;
-  } finally {
-    clearTimeout(t);
-  }
-}
-
 async function getStatus(){
-  const url = `${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`;
-  const js = await fetchJson(url, {method:"GET"}, 8000);
-  if(!js || js.result!=="ok") throw new Error("status");
-  return js.items || [];
+  const js=await fetchJson(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`,{method:"GET"},8000);
+  if(!js||js.result!=="ok")throw 0; return js.items||[];
+}
+async function post(action, payload={}){
+  return fetchJson(GAS_URL,{
+    method:"POST",headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({datetime:new Date().toISOString(),site,tool,toolName:TOOL_NAME[tool],action,user:getUser(),...payload})
+  },15000);
 }
 
-async function postAction({action, toolId, toolName, photoDataUrl}){
-  const payload = {
-    datetime: new Date().toISOString(),
-    site,
-    tool: toolId,
-    toolName,
-    action,
-    user: getUser()
-  };
-  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
-
-  const js = await fetchJson(GAS_URL, {
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify(payload)
-  }, 15000);
-  if(!js || js.result!=="ok") throw new Error(js?.message || "post");
+/* ===== カメラ（返却のみ） ===== */
+let stream=null;
+async function startCam(){
+  const v=document.getElementById("v");
+  stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
+  v.srcObject=stream;
 }
-
-/* ===== カメラ（返却専用・超低画質） ===== */
-let stream = null;
-
-async function startCamera(){
-  const v = document.getElementById("v");
-  stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
-  v.srcObject = stream;
+function stopCam(){ try{stream&&stream.getTracks().forEach(t=>t.stop());}catch(_){}
+  stream=null; document.getElementById("cam").classList.add("hidden");
 }
-
-function stopCamera(){
-  try{ if(stream) stream.getTracks().forEach(t=>t.stop()); }catch(_){}
-  stream = null;
-  const cam = document.getElementById("cam");
-  if(cam) cam.classList.add("hidden");
-}
-
-async function captureLowJpeg(){
-  const v = document.getElementById("v");
-  await new Promise(r=>setTimeout(r,160));
-  const w = v.videoWidth || 1280;
-  const h = v.videoHeight || 720;
-
-  const outW = 320;                  // 超低画質
-  const outH = Math.max(180, Math.round(outW * (h / w)));
-
-  const c = document.createElement("canvas");
-  c.width = outW; c.height = outH;
-  c.getContext("2d").drawImage(v, 0, 0, outW, outH);
-
-  return c.toDataURL("image/jpeg", 0.45);
+async function snapLow(){
+  const v=document.getElementById("v"); await new Promise(r=>setTimeout(r,120));
+  const w=v.videoWidth||1280,h=v.videoHeight||720,ow=320,oh=Math.round(ow*h/w);
+  const c=document.createElement("canvas"); c.width=ow;c.height=oh;
+  c.getContext("2d").drawImage(v,0,0,ow,oh); return c.toDataURL("image/jpeg",0.5);
 }
 
 /* ===== UI ===== */
 function header(){
-  const u = getUser() || "未設定";
-  if(confirmMode){
-    hdr.textContent = `返却確認用　現場：${site}　端末：${u}`;
-    return;
-  }
-  const tn = tool ? (TOOL_NAME[tool] || "不明") : "（未指定）";
-  hdr.textContent = `現場：${site}　道具：${tn}（${tool||"未指定"}）　端末：${u}`;
+  hdr.textContent=confirmMode?`返却確認用　現場：${site}　端末：${getUser()||"未設定"}`:
+  `現場：${site}　道具：${TOOL_NAME[tool]||""}（${tool||""}）　端末：${getUser()||"未設定"}`;
 }
+function showUser(){
+  app.innerHTML=`<div class="card"><h2>この端末の名前</h2>${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}</div>`;
+}
+window.pick=n=>{setUser(n);render();};
 
-function showUserSelect(){
-  app.innerHTML = `
-    <div class="card">
-      <h2>この端末の名前<span class="badge">最初の1回だけ</span></h2>
-      ${MEMBERS.map(n=>`<button type="button" onclick="pick('${n}')">${esc(n)}</button>`).join("")}
+let optimisticStatus=null; // 楽観更新用
+
+function renderNormal(items){
+  const me=items.find(x=>x.tool===tool)||optimisticStatus;
+  app.innerHTML=`
+  <div class="card ${me&&me.status==='OUT'?'stateOut':me&&me.status==='PENDING'?'statePending':'stateIn'}">
+    <h2>状態</h2><div style="font-size:20px">${me?statusLabel(me.status):"持ち出し無し"}</div>
+  </div>
+  <div class="card">
+    <h2>${TOOL_NAME[tool]||""}</h2>
+    <button onclick="take()">持ち出し</button>
+    <button onclick="startReturn()">返却</button>
+    <div id="cam" class="card hidden" style="margin-top:12px">
+      <video id="v" autoplay playsinline></video>
+      <button onclick="sendReturn()">撮影して返却</button>
+      <button class="small" onclick="cancel()">中止</button>
     </div>
-  `;
+  </div>
+  <div class="card"><h2>履歴一覧</h2>${renderList(items)}</div>`;
 }
-window.pick = (n)=>{ setUser(n); render(); };
-
+function renderConfirm(items){
+  const p=items.filter(x=>x.status==="PENDING");
+  app.innerHTML=`<div class="card"><h2>返却確認待ち</h2>${p.length?p.map(x=>`
+    <div class="item statePending">
+      <b>${x.toolName}（${x.tool}）</b>
+      <div class="meta">返却確認待ち / ${x.by||""} / ${x.at?new Date(x.at).toLocaleString():""}</div>
+      ${x.photoUrl?`<button class="small" onclick="openPhoto('${x.photoUrl}')">写真を見る</button>`:""}
+      <button onclick="confirmTool('${x.tool}')">確認</button>
+    </div>`).join(""):`<div>ありません</div>`}</div>`;
+}
 function renderList(items){
-  // 履歴一覧：写真なし（状態・人・時刻だけ）
-  if(items.length===0){
-    return `<div class="item"><b>持ち出し無し</b><div class="meta">持ち出し中／返却確認待ちはありません</div></div>`;
-  }
-  return `<div class="list">` + items.map(x=>{
-    const t = x.at ? new Date(x.at).toLocaleString() : "";
-    return `
-      <div class="item ${x.status==="OUT"?"stateOut":(x.status==="PENDING"?"statePending":"stateIn")}">
-        <b>${esc(x.toolName)}（${esc(x.tool)}）</b>
-        <div class="meta">${esc(statusLabel(x.status))} / ${esc(x.by||"")} / ${esc(t)}</div>
-      </div>
-    `;
-  }).join("") + `</div>`;
+  if(!items.length) return `<div class="item"><b>持ち出し無し</b></div>`;
+  return `<div class="list">`+items.map(x=>`
+    <div class="item ${x.status==='OUT'?'stateOut':x.status==='PENDING'?'statePending':'stateIn'}">
+      <b>${x.toolName}（${x.tool}）</b>
+      <div class="meta">${statusLabel(x.status)} / ${x.by||""} / ${x.at?new Date(x.at).toLocaleString():""}</div>
+    </div>`).join("")+`</div>`;
 }
-
-let sending = false;
+window.openPhoto=u=>window.open(u,"_blank");
 
 async function refresh(){
   try{
-    const items = await getStatus();
-
-    if(confirmMode){
-      // 確認者用：PENDINGだけ
-      const pending = items.filter(x=>x.status==="PENDING");
-      app.innerHTML = `
-        <div class="card">
-          <h2>返却確認待ち</h2>
-          ${pending.length===0
-            ? `<div style="font-size:18px">返却確認待ちはありません</div>`
-            : pending.map(x=>{
-                const t = x.at ? new Date(x.at).toLocaleString() : "";
-                const tn = x.toolName || (TOOL_NAME[x.tool]||"不明");
-                return `
-                  <div class="item statePending">
-                    <b>${esc(tn)}（${esc(x.tool)}）</b>
-                    <div class="meta">返却確認待ち / ${esc(x.by||"")} / ${esc(t)}</div>
-                    <button type="button" onclick="confirmTool('${esc(x.tool)}')">確認</button>
-                  </div>
-                `;
-              }).join("")
-          }
-          <button type="button" class="small" onclick="refresh()">更新</button>
-        </div>
-      `;
-      return;
-    }
-
-    // 通常：指定toolの状態
-    const me = tool ? items.find(x=>x.tool===tool) : null;
-
-    const tn = tool ? (TOOL_NAME[tool] || "不明") : "";
-    const statusText = tool ? cardText(me) : "";
-
-    app.innerHTML = `
-      <div class="card ${borderClass(me)}">
-        <h2>状態</h2>
-        <div style="font-size:22px">${esc(statusText || "持ち出し無し")}</div>
-        ${me && me.status==="PENDING" ? `<div style="opacity:.8;margin-top:8px">返却確認待ちです（確認者が確認すると「持ち出し無し」になります）</div>` : ``}
-      </div>
-
-      <div class="card">
-        <h2>${esc(tn)}</h2>
-        <button id="btnTake" type="button" onclick="take()">持ち出し（写真なし）</button>
-        <button id="btnReturn" type="button" onclick="startReturn()">返却（写真あり）</button>
-
-        <div id="cam" class="card hidden" style="margin-top:12px">
-          <video id="v" autoplay playsinline></video>
-          <button type="button" onclick="shotAndSend()">撮影して返却</button>
-          <button type="button" class="small" onclick="cancelCam()">中止</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <h2>履歴一覧（写真なし）</h2>
-        ${renderList(items.filter(x=>x.status==="OUT"||x.status==="PENDING"||x.status==="IN"))}
-      </div>
-    `;
-
-    // 送信中はボタン無効化
-    const bt = document.getElementById("btnTake");
-    const br = document.getElementById("btnReturn");
-    if(bt) bt.disabled = sending;
-    if(br) br.disabled = sending;
-
-  }catch(e){
-    app.innerHTML = `<div class="card"><h2>取得失敗</h2><button type="button" onclick="refresh()">再取得</button></div>`;
-  }
+    const items=await getStatus();
+    confirmMode?renderConfirm(items):renderNormal(items);
+  }catch{ toast("通信エラー"); confirmMode?renderConfirm([]):renderNormal([]); }
 }
 
-window.take = async ()=>{
-  if(!tool){ toast("エラー","toolが指定されてない"); return; }
-  if(sending) return;
-  sending = true;
-  try{
-    toast("送信中","持ち出し");
-    await postAction({action:"持ち出し", toolId:tool, toolName:(TOOL_NAME[tool]||"不明")});
-    vibrate(80);
-    toast("記録した","持ち出し");
-  }catch(_){
-    toast("通信エラー","持ち出し失敗");
-  }finally{
-    sending = false;
-    await refresh();
-  }
+window.take=async()=>{
+  optimisticStatus={tool,toolName:TOOL_NAME[tool],status:"OUT"};
+  renderNormal([]); toast("送信中","持ち出し");
+  try{ await post("持ち出し"); vibrate(80); toast("記録"); }
+  catch{ toast("通信エラー"); }
+  finally{ optimisticStatus=null; refresh(); }
 };
-
-window.startReturn = async ()=>{
-  if(!tool){ toast("エラー","toolが指定されてない"); return; }
-  if(sending) return;
-  try{
-    const cam = document.getElementById("cam");
-    cam.classList.remove("hidden");
-    await startCamera(); // iOS対策：ボタン操作直後に起動
-  }catch(_){
-    toast("カメラ起動できない","許可/HTTPS/設定を確認");
-    stopCamera();
-  }
+window.startReturn=async()=>{
+  try{ document.getElementById("cam").classList.remove("hidden"); await startCam(); }
+  catch{ toast("カメラ起動不可"); stopCam(); }
 };
-
-window.cancelCam = ()=> stopCamera();
-
-window.shotAndSend = async ()=>{
-  if(!tool){ toast("エラー","toolが指定されてない"); return; }
-  if(sending) return;
-  sending = true;
-  try{
-    toast("処理中","撮影→送信");
-    const dataUrl = await captureLowJpeg();
-    stopCamera();
-    await postAction({action:"返却", toolId:tool, toolName:(TOOL_NAME[tool]||"不明"), photoDataUrl:dataUrl});
-    vibrate([60,60,60]);
-    toast("記録した","返却（確認待ち）");
-  }catch(_){
-    toast("通信エラー","返却失敗");
-  }finally{
-    sending = false;
-    await refresh();
-  }
+window.cancel=()=>stopCam();
+window.sendReturn=async()=>{
+  optimisticStatus={tool,toolName:TOOL_NAME[tool],status:"PENDING"};
+  renderNormal([]); toast("送信中","返却");
+  try{ const d=await snapLow(); stopCam(); await post("返却",{photoDataUrl:d}); vibrate([60,60,60]); toast("記録"); }
+  catch{ toast("通信エラー"); }
+  finally{ optimisticStatus=null; refresh(); }
 };
-
-window.confirmTool = async (toolId)=>{
-  if(!toolId){ toast("エラー","tool不明"); return; }
-  if(sending) return;
-  sending = true;
-  try{
-    toast("送信中","確認");
-    await postAction({action:"確認", toolId:toolId, toolName:(TOOL_NAME[toolId]||"不明")});
-    vibrate(80);
-    toast("記録した","確認");
-  }catch(_){
-    toast("通信エラー","確認失敗");
-  }finally{
-    sending = false;
-    await refresh();
-  }
+window.confirmTool=async(t)=>{
+  toast("送信中","確認");
+  try{ await post("確認",{tool:t}); vibrate(80); toast("記録"); }
+  catch{ toast("通信エラー"); }
+  finally{ refresh(); }
 };
 
 function render(){
   header();
-  if(!getUser()){ showUserSelect(); return; }
-  app.innerHTML = `<div class="card"><h2>状態</h2><div style="font-size:20px">状態取得中…</div></div>`;
-  refresh();
-  setInterval(refresh, 15000);
+  if(!getUser()){ showUser(); return; }
+  app.innerHTML=`<div class="card"><h2>状態</h2><div>取得中…</div></div>`;
+  refresh(); setInterval(refresh,15000);
 }
 render();
 </script>
